# feature-find

./: .gitignore  .pre-commit-config.yaml  README.md  index.py  main.py  manage.py  pyproject.toml  requirements.txt
feature_find/: asgi.py  settings.py  urls.py  wsgi.py
image_matcher/: asgi.py  settings.py  urls.py
image_matcher/image_matcher/: settings.py  urls.py  wsgi.py
image_matcher/search_gui/: apps.py  urls.py  views.py
modules/: colordescriptor.py  feature_extractor.py  index.py  searcher.py
search_gui/: models.py  urls.py  views.py
search_gui/migrations/: 0001_initial.py
search_gui/templates/: index.html
