[project]
name = "image-matcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.6"
dependencies = [
    "imutils>=0.5.4",
    "keras>=3.10.0",
    "matplotlib>=3.10.3",
    "opencv-python>=4.11.0.86",
    "scipy>=1.16.0",
    "tensorflow>=2.19.0",
]
