[project]
name = "feature-find"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.6"
dependencies = [
    "django>=5.2.3",
    "h5py>=3.14.0",
    "opencv-python>=4.11.0.86",
    "pre-commit>=4.2.0",
    "scikit-learn>=1.7.0",
    "tensorflow[and-cuda]>=2.19.0",
]
